--- a/COD_Randomizer_App/MainPage.xaml
+++ b/COD_Randomizer_App/MainPage.xaml
@@ -2,15 +2,20 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:COD_Randomizer_App"
-             x:Class="COD_Randomizer_App.MainPage">
+             x:Class="COD_Randomizer_App.MainPage"
+             BackgroundColor="#202020">
     <ContentPage.BindingContext>
         <local:MainPageViewModel />
     </ContentPage.BindingContext>
 
     <StackLayout VerticalOptions="CenterAndExpand">
-        <Label Text="{Binding Slot1}"
-               FontSize="Large" 
-               HorizontalOptions="Center" />
+        <Frame Margin="10,5"
+               CornerRadius="15">
+            <Label Text="{Binding Slot1}"
+                   FontSize="Large"
+                   HorizontalOptions="Center" />
+        </Frame>
+        
 
         <Button Text="Generate"
                 Command="{Binding GenerateCommand}" />
