--- a/COD_Randomizer_App/App.xaml
+++ b/COD_Randomizer_App/App.xaml
@@ -3,6 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="COD_Randomizer_App.App">
     <Application.Resources>
-
+        <Style TargetType="Label">
+            <Setter Property="TextColor"
+                    Value="Black" />
+        </Style>
     </Application.Resources>
 </Application>
