--- a/COD_Randomizer_App/App.xaml
+++ b/COD_Randomizer_App/App.xaml
@@ -9,7 +9,8 @@
             <Color x:Key="BackgroundColor">#202020</Color>
             <Color x:Key="SecondaryBackgroundColor">#3A3A3A</Color>
             <Color x:Key="TertiaryBackgroundColor">#A1A1A1</Color>
-            
+            <Color x:Key="QuaternaryBackgroundColor">#f2efee</Color>
+
             <Color x:Key="PrimaryTextColor">Black</Color>
             <Color x:Key="SecondaryTextColor">#464646</Color>
             <Color x:Key="TertiaryTextColor">#929292</Color>
