--- a/COD_Randomizer_App/Views/SettingsPage.xaml
+++ b/COD_Randomizer_App/Views/SettingsPage.xaml
@@ -1,12 +1,33 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="COD_Randomizer_App.Views.SettingsPage">
+             xmlns:vm="clr-namespace:COD_Randomizer_App.ViewModels"
+             x:Class="COD_Randomizer_App.Views.SettingsPage"
+             x:DataType="vm:SettingsViewModel">
     <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
-        </StackLayout>
+        <TableView Intent="Settings">
+            <TableRoot>
+                <TableSection Title="First Section">
+                    <TextCell Text="TextCell"
+                              Detail="TextCell Detail" />
+                    <EntryCell Label="Entry Label"
+                               Text="EntryCell Text" />
+                    <SwitchCell Text="SwitchCell Text" />
+                    <ImageCell Text="ImageCell Text"
+                               Detail="ImageCell Detail"
+                               ImageSource="XamarinLogo.png" />
+                </TableSection>
+                <TableSection Title="Second Section">
+                    <TextCell Text="TextCell"
+                              Detail="TextCell Detail" />
+                    <EntryCell Label="Entry Label"
+                               Text="EntryCell Text" />
+                    <SwitchCell Text="SwitchCell Text" />
+                    <ImageCell Text="ImageCell Text"
+                               Detail="ImageCell Detail"
+                               ImageSource="XamarinLogo.png" />
+                </TableSection>
+            </TableRoot>
+        </TableView>
     </ContentPage.Content>
 </ContentPage>
