--- a/COD_Randomizer_App/App.xaml
+++ b/COD_Randomizer_App/App.xaml
@@ -1,55 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <Application xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:local="clr-namespace:COD_Randomizer_App"
              x:Class="COD_Randomizer_App.App">
     <Application.Resources>
-        <ResourceDictionary>
-
-            <!-- Colors -->
-            <Color x:Key="BackgroundColor">#202020</Color>
-            <Color x:Key="SecondaryBackgroundColor">#3A3A3A</Color>
-            <Color x:Key="TertiaryBackgroundColor">#A1A1A1</Color>
-            <Color x:Key="QuaternaryBackgroundColor">#f2efee</Color>
-
-            <Color x:Key="PrimaryTextColor">Black</Color>
-            <Color x:Key="SecondaryTextColor">#464646</Color>
-            <Color x:Key="TertiaryTextColor">#929292</Color>
-
-            <Color x:Key="HighlightColor">#A350C1</Color>
-
-            <!-- Implicit styles -->
-            
-            <Style TargetType="ContentPage"
-                   ApplyToDerivedTypes="True">
-                <Setter Property="BackgroundColor"
-                        Value="{StaticResource BackgroundColor}" />
-                <Setter Property="Title"
-                        Value="FUCK YOU" />
-            </Style>
-
-            <Style TargetType="Label">
-                <Setter Property="TextColor"
-                        Value="{StaticResource PrimaryTextColor}" />
-            </Style>
-
-            <Style TargetType="Frame">
-                <Setter Property="Padding"
-                        Value="15,10" />
-                <Setter Property="CornerRadius"
-                        Value="15" />
-            </Style>
-
-            <Style TargetType="Button">
-                <Setter Property="FontSize"
-                        Value="Medium" />
-                <Setter Property="TextColor"
-                        Value="{StaticResource PrimaryTextColor}" />
-                <Setter Property="BackgroundColor"
-                        Value="{StaticResource TertiaryBackgroundColor}" />
-                <Setter Property="CornerRadius"
-                        Value="5" />
-            </Style>
-            
-        </ResourceDictionary>
+        <!-- <local:AppStyles /> -->
+        <ResourceDictionary Source="AppStyles.xaml" />
     </Application.Resources>
 </Application>
