--- a/COD_Randomizer_App/AppStyles.xaml
+++ b/COD_Randomizer_App/AppStyles.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
-<ResourceDictionary xmlns="http://xamarin.com/schemas/2014/forms" 
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="COD_Randomizer_App.AppStyles">
+<ResourceDictionary xmlns="http://xamarin.com/schemas/2014/forms"
+                    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+                    xmlns:ctls="clr-namespace:COD_Randomizer_App.Controls"
+                    x:Class="COD_Randomizer_App.AppStyles">
 
     <!-- COLORS -->
     <Color x:Key="ThemePrimary">#fd7b38</Color>
@@ -23,13 +24,19 @@
     <Color x:Key="BackgroundColor">#202020</Color>
     <Color x:Key="BackgroundColorLight">#2c2c2c</Color>
     <Color x:Key="BackgroundColorLight2">#313131</Color>
-    <Color x:Key="TextPrimaryColor_Dark">#FFFFFF</Color>
+    <Color x:Key="SecondaryBackgroundColor">#3A3A3A</Color>
+    <Color x:Key="TertiaryBackgroundColor">#A1A1A1</Color>
+    <Color x:Key="QuaternaryBackgroundColor">#f2efee</Color>
+
+    <Color x:Key="PrimaryTextColor">Black</Color>
     <Color x:Key="TextPrimaryColor_Light">#323130</Color>
-    <Color x:Key="TextSecondaryColor_Dark">#FFFFFF</Color>
+    <Color x:Key="SecondaryTextColor">#464646</Color>
     <Color x:Key="TextSecondaryColor_Light">#a3a2a0</Color>
+    <Color x:Key="TertiaryTextColor">#929292</Color>
+    <Color x:Key="QuaternaryTextColor">#f2efee</Color>
+
 
     <!-- BRUSHES -->
-
     <SolidColorBrush x:Key="DarkBrush"
                      Color="#605E5D" />
     <SolidColorBrush x:Key="LightBrush"
@@ -63,32 +70,40 @@
     <x:Double x:Key="TextSizeSmallCaption">11</x:Double>
 
     <!-- SHELL -->
+
     <Style x:Key="BaseStyle"
            TargetType="Element">
         <Setter Property="Shell.BackgroundColor"
-                Value="{DynamicResource ThemePrimary}" />
+                Value="{StaticResource BackgroundColor}" />
         <Setter Property="Shell.ForegroundColor"
-                Value="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource Black}}" />
+                Value="{StaticResource Highlight}" />
         <Setter Property="Shell.TitleColor"
-                Value="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource Black}}" />
+                Value="{StaticResource QuaternaryTextColor}" />
         <Setter Property="Shell.DisabledColor"
-                Value="#B4000000" />
+                Value="{StaticResource BackgroundColorLight}" />
         <Setter Property="Shell.UnselectedColor"
-                Value="#CC0000" />
+                Value="{StaticResource HighlightVariantDark}" />
         <Setter Property="Shell.NavBarHasShadow"
                 Value="False" />
+        <Setter Property="Shell.BackgroundColor"
+                Value="{StaticResource BackgroundColor}" />
+        <Setter Property="Shell.FlyoutWidth"
+                Value="200" />
     </Style>
 
-    <Style BasedOn="{StaticResource BaseStyle}"
-           ApplyToDerivedTypes="True"
-           TargetType="FlyoutItem" />
+    <!-- Flyout -->
+
+    <Style TargetType="FlyoutItem"
+           BasedOn="{StaticResource BaseStyle}"
+           ApplyToDerivedTypes="True" />
 
     <Style TargetType="Label"
-           Class="FlyoutItemLabelStyle">
+           Class="FlyoutItemLabelStyle"
+           ApplyToDerivedTypes="True">
         <Setter Property="FontSize"
                 Value="16" />
         <Setter Property="TextColor"
-                Value="{AppThemeBinding Dark={StaticResource TextPrimaryColor_Dark}, Light={StaticResource TextPrimaryColor_Light}}" />
+                Value="{StaticResource TertiaryTextColor}" />
         <Setter Property="FontFamily"
                 Value="DSans" />
         <Setter Property="HeightRequest"
@@ -97,9 +112,9 @@
 
     <Style TargetType="Layout"
            ApplyToDerivedTypes="True"
-           Class="FlyoutItemGridStyle">
+           Class="FlyoutItemLayoutStyle">
         <Setter Property="HeightRequest"
-                Value="44" />
+                Value="50" />
         <Setter Property="VisualStateManager.VisualStateGroups">
             <VisualStateGroupList>
                 <VisualStateGroup x:Name="CommonStates">
@@ -111,8 +126,7 @@
                     <VisualState x:Name="Selected">
                         <VisualState.Setters>
                             <Setter Property="BackgroundColor"
-                                    Value="#FF3300" />
-
+                                    Value="{StaticResource Highlight}" />
                         </VisualState.Setters>
                     </VisualState>
                     <VisualState x:Name="Disabled">
@@ -129,19 +143,21 @@
     <Style TargetType="Page"
            ApplyToDerivedTypes="True">
         <Setter Property="BackgroundColor"
-                Value="{AppThemeBinding Dark={StaticResource BackgroundColorDark}, Light={StaticResource BackgroundColorLight}}" />
+                Value="{StaticResource BackgroundColor}" />
+        <Setter Property="Title"
+                Value="THISE" />
     </Style>
 
     <!-- NAVIGATIONPAGE -->
     <Style TargetType="NavigationPage">
         <Setter Property="BarTextColor"
-                Value="{AppThemeBinding Dark={StaticResource TextPrimaryColor_Dark}, Light={StaticResource TextPrimaryColor_Light}}" />
+                Value="{StaticResource QuaternaryBackgroundColor}" />
     </Style>
 
     <!-- TEXT / LABEL -->
     <Style TargetType="Label">
         <Setter Property="TextColor"
-                Value="{AppThemeBinding Dark={StaticResource TextPrimaryColor_Dark}, Light={StaticResource TextPrimaryColor_Light}}" />
+                Value="{StaticResource PrimaryTextColor}" />
         <Setter Property="FontSize"
                 Value="{StaticResource TextSizeBody}" />
         <Setter Property="FontFamily"
@@ -151,7 +167,7 @@
     <Style x:Key="BaseLabel"
            TargetType="Label">
         <Setter Property="TextColor"
-                Value="{AppThemeBinding Dark={StaticResource TextPrimaryColor_Dark}, Light={StaticResource TextPrimaryColor_Light}}" />
+                Value="{StaticResource PrimaryTextColor}" />
     </Style>
 
     <Style x:Key="TextHeadline"
@@ -179,8 +195,6 @@
 
     <Style x:Key="TextSubheadSecondary"
            TargetType="Label">
-        <Setter Property="TextColor"
-                Value="{AppThemeBinding Dark={StaticResource TextSecondaryColor_Dark}, Light={StaticResource TextSecondaryColor_Light}}" />
         <Setter Property="FontSize"
                 Value="{StaticResource TextSizeSubHeading}" />
     </Style>
@@ -215,8 +229,6 @@
 
     <Style x:Key="TextCaptionSecondary"
            TargetType="Label">
-        <Setter Property="TextColor"
-                Value="{AppThemeBinding Dark={StaticResource TextSecondaryColor_Dark}, Light={StaticResource TextSecondaryColor_Light}}" />
         <Setter Property="FontSize"
                 Value="{StaticResource TextSizeCaption}" />
     </Style>
@@ -227,48 +239,26 @@
                 Value="{DynamicResource ThemePrimary}" />
     </Style>
 
-    <!-- BUTTON -->
-    <Style x:Key="PrimaryButton"
-           TargetType="Button">
-        <Setter Property="TextColor"
-                Value="{StaticResource White}" />
+    <!-- FRAME -->
+    <Style TargetType="Frame">
+        <Setter Property="BackgroundColor"
+                Value="{StaticResource QuaternaryBackgroundColor}" />
         <Setter Property="BorderColor"
                 Value="Transparent" />
-        <Setter Property="VisualStateManager.VisualStateGroups">
-            <VisualStateGroupList>
-                <VisualStateGroup x:Name="CommonStates">
-                    <VisualState x:Name="Normal">
-                        <VisualState.Setters>
-                            <Setter Property="BackgroundColor"
-                                    Value="{StaticResource ThemePrimary}" />
-                        </VisualState.Setters>
-                    </VisualState>
-                    <VisualState x:Name="Focused">
-                        <VisualState.Setters>
-                            <Setter Property="BackgroundColor"
-                                    Value="{StaticResource ThemeDark}" />
-                        </VisualState.Setters>
-                    </VisualState>
-                    <VisualState x:Name="Disabled">
-                        <VisualState.Setters>
-                            <Setter Property="BackgroundColor"
-                                    Value="{StaticResource NeutralLighter}" />
-                            <Setter Property="TextColor"
-                                    Value="{StaticResource NeutralQuaternary}" />
-                        </VisualState.Setters>
-                    </VisualState>
-                </VisualStateGroup>
-            </VisualStateGroupList>
-        </Setter>
+        <Setter Property="CornerRadius"
+                Value="15" />
+        <Setter Property="Padding"
+                Value="15,10" />
     </Style>
 
+    <!-- BUTTON -->
     <Style TargetType="Button">
         <Setter Property="BackgroundColor"
-                Value="{StaticResource White}" />
+                Value="{StaticResource TertiaryBackgroundColor}" />
         <Setter Property="TextColor"
-                Value="{StaticResource NeutralPrimary}" />
+                Value="{StaticResource PrimaryTextColor}" />
         <Setter Property="BorderColor"
-                Value="{StaticResource NeutralSecondaryAlt}" />
+                Value="{StaticResource Highlight}" />
         <Setter Property="BorderWidth"
                 Value="1" />
 
@@ -277,29 +267,41 @@
                 <VisualStateGroup x:Name="CommonStates">
                     <VisualState x:Name="Normal">
                         <VisualState.Setters>
-                            <Setter Property="BackgroundColor"
-                                    Value="{StaticResource White}" />
+
                         </VisualState.Setters>
                     </VisualState>
                     <VisualState x:Name="Focused">
+                        <!-- Not really necessary on mobile, if in emulater you can change focus with TAB key, dont know if possible on mobile-->
                         <VisualState.Setters>
                             <Setter Property="BackgroundColor"
-                                    Value="{StaticResource NeutralLight}" />
+                                    Value="{StaticResource Highlight}" />
                             <Setter Property="TextColor"
-                                    Value="{StaticResource NeutralDark}" />
+                                    Value="{StaticResource HighlightDark}" />
                         </VisualState.Setters>
                     </VisualState>
                     <VisualState x:Name="Disabled">
                         <VisualState.Setters>
                             <Setter Property="BackgroundColor"
-                                    Value="{StaticResource NeutralLighter}" />
+                                    Value="{StaticResource BackgroundColorLight2}" />
                             <Setter Property="TextColor"
-                                    Value="{StaticResource NeutralQuaternary}" />
+                                    Value="{StaticResource TertiaryBackgroundColor}" />
                         </VisualState.Setters>
                     </VisualState>
                 </VisualStateGroup>
             </VisualStateGroupList>
         </Setter>
+    </Style>
+
+    <Style x:Key="GenerateButton"
+           TargetType="Button">
+        <Setter Property="Margin"
+                Value="10,5" />
+        <Setter Property="FontSize"
+                Value="Large" />
+        <Setter Property="FontAttributes"
+                Value="Bold" />
+        <Setter Property="CornerRadius"
+                Value="15" />
     </Style>
 
     <!-- CHECKBOX -->
@@ -311,27 +313,33 @@
     <Style x:Key="CheckBoxLabel"
            TargetType="Label">
         <Setter Property="TextColor"
-                Value="{AppThemeBinding Dark={StaticResource TextPrimaryColor_Dark}, Light={StaticResource TextPrimaryColor_Light}}" />
+                Value="{StaticResource PrimaryTextColor}" />
     </Style>
 
     <!-- RADIOBUTTON -->
     <Style TargetType="RadioButton">
         <Setter Property="BackgroundColor"
-                Value="Transparent" />
+                Value="{StaticResource TertiaryBackgroundColor}" />
         <Setter Property="TextColor"
-                Value="{AppThemeBinding Dark={StaticResource TextPrimaryColor_Dark}, Light={StaticResource TextPrimaryColor_Light}}" />
+                Value="{StaticResource PrimaryTextColor}" />
         <Setter Property="BorderColor"
                 Value="{StaticResource ThemePrimary}" />
+        <Setter Property="CornerRadius"
+                Value="15" />
+        <Setter Property="WidthRequest"
+                Value="85" />
+        <Setter Property="BorderWidth"
+                Value="2" />
     </Style>
 
     <!-- ENTRY -->
     <Style TargetType="Entry">
         <Setter Property="BackgroundColor"
-                Value="{AppThemeBinding Dark={StaticResource BackgroundColorDark}, Light={StaticResource BackgroundColorLight}}" />
+                Value="{StaticResource TertiaryBackgroundColor}" />
         <Setter Property="PlaceholderColor"
-                Value="{StaticResource NeutralSecondary}" />
+                Value="{StaticResource HighlightDark}" />
         <Setter Property="TextColor"
-                Value="{AppThemeBinding Dark={StaticResource TextPrimaryColor_Dark}, Light={StaticResource TextPrimaryColor_Light}}" />
+                Value="{StaticResource PrimaryTextColor}" />
     </Style>
 
     <!-- SWITCH -->
@@ -346,7 +354,7 @@
                     <VisualState x:Name="Normal">
                         <VisualState.Setters>
                             <Setter Property="ThumbColor"
-                                    Value="{StaticResource NeutralPrimaryAlt}" />
+                                    Value="{StaticResource Highlight}" />
                         </VisualState.Setters>
                     </VisualState>
                     <VisualState x:Name="Selected">
@@ -358,9 +366,9 @@
                     <VisualState x:Name="Disabled">
                         <VisualState.Setters>
                             <Setter Property="OnColor"
-                                    Value="{StaticResource NeutralLighter}" />
+                                    Value="{StaticResource HighlightDark}" />
                             <Setter Property="ThumbColor"
-                                    Value="{StaticResource NeutralLight}" />
+                                    Value="{StaticResource QuaternaryBackgroundColor}" />
                         </VisualState.Setters>
                     </VisualState>
                 </VisualStateGroup>
@@ -382,11 +390,11 @@
                     <VisualState x:Name="Disabled">
                         <VisualState.Setters>
                             <Setter Property="MinimumTrackColor"
-                                    Value="{StaticResource NeutralPrimary}" />
+                                    Value="{StaticResource QuaternaryBackgroundColor}" />
                             <Setter Property="MaximumTrackColor"
-                                    Value="{StaticResource NeutralPrimary }" />
+                                    Value="{StaticResource QuaternaryBackgroundColor}" />
                             <Setter Property="ThumbColor"
-                                    Value="{StaticResource NeutralPrimary}" />
+                                    Value="{StaticResource QuaternaryBackgroundColor}" />
                         </VisualState.Setters>
                     </VisualState>
                 </VisualStateGroup>
@@ -403,7 +411,7 @@
         <Setter Property="CornerRadius"
                 Value="0" />
         <Setter Property="BorderColor"
-                Value="{StaticResource NeutralSecondary}" />
+                Value="{StaticResource Highlight}" />
     </Style>
 
     <!-- ACTIVITYINDICATOR -->
@@ -421,7 +429,7 @@
     <!-- INDICATORVIEW -->
     <Style TargetType="IndicatorView">
         <Setter Property="IndicatorColor"
-                Value="{StaticResource NeutralLight}" />
+                Value="{StaticResource Highlight}" />
         <Setter Property="SelectedIndicatorColor"
                 Value="{StaticResource ThemePrimary}" />
     </Style>
@@ -430,7 +438,7 @@
     <Style TargetType="SwipeItemView"
            ApplyToDerivedTypes="True">
         <Setter Property="BackgroundColor"
-                Value="{StaticResource NeutralLight}" />
+                Value="{StaticResource HighlightVariant}" />
     </Style>
 
     <!-- MISC -->
@@ -441,9 +449,18 @@
         <Setter Property="HorizontalOptions"
                 Value="FillAndExpand" />
         <Setter Property="BackgroundColor"
-                Value="{StaticResource NeutralLighter}" />
+                Value="{StaticResource HighlightVariantDark}" />
     </Style>
-
-    <x:String x:Key="LineBreak">&#x0a;</x:String>
+    
+    <!-- Cells -->
+    
+    <!-- think it is not possible to style textcells... -->
+    
+    <Style TargetType="TextCell">
+        <Setter Property="TextColor"
+                Value="Blue" />
+        <Setter Property="DetailColor"
+                Value="Green" />
+    </Style>
 
 </ResourceDictionary>
