--- a/COD_Randomizer_App/Views/MainPage.xaml
+++ b/COD_Randomizer_App/Views/MainPage.xaml
@@ -13,9 +13,7 @@
                     HorizontalScrollBarVisibility="Never"
                     VerticalScrollBarVisibility="Never">
             <StackLayout>
-                <Frame Margin="10,10,10,0"
-                       Padding="15,10"
-                       CornerRadius="15">
+                <Frame Margin="10,10,10,0">
                     <StackLayout Spacing="0">
                         <Label Text="Primary:"
                                FontSize="Small"
@@ -48,9 +46,7 @@
                     </StackLayout>
                 </Frame>
 
-                <Frame Margin="10,5,10,0"
-                       Padding="15,10"
-                       CornerRadius="15">
+                <Frame Margin="10,5,10,0">
                     <StackLayout Spacing="0">
                         <Label Text="Secondary:"
                                FontSize="Small"
@@ -81,9 +77,7 @@
                     </StackLayout>
                 </Frame>
 
-                <Frame Margin="10,5,10,0"
-                       Padding="15,10"
-                       CornerRadius="15">
+                <Frame Margin="10,5,10,0">
                     <StackLayout>
                         <Label Text="{Binding Loadout.Perk1}"
                                FontSize="Large"
@@ -98,8 +92,6 @@
                 </Frame>
 
                 <Frame Margin="10,5,10,0"
-                       Padding="15,10"
-                       CornerRadius="15"
                        Grid.Row="3">
                     <Label Text="{Binding Loadout.Lethal}"
                            FontSize="Large"
@@ -107,8 +99,6 @@
                 </Frame>
 
                 <Frame Margin="10,5,10,0"
-                       Padding="15,10"
-                       CornerRadius="15"
                        Grid.Row="4">
                     <Label Text="{Binding Loadout.Tactical}"
                            FontSize="Large"
@@ -119,10 +109,7 @@
 
         <Button Text="Generate"
                 Command="{Binding GenerateCommand}"
-                CornerRadius="15"
-                Margin="10,5"
-                FontSize="Large"
-                FontAttributes="Bold"
+                Style="{StaticResource GenerateButton}"
                 Grid.Row="2"/>
     </Grid>
 
